# Contest

./: .dockerignore  .env.development.example  .env.production.example  .gitignore  COPYRIGHT  DESIGN.md  Dockerfile  MULTITURN.md  README.md  SECURITY.md  accountability-snapshot.md  backend-feature01.md  chat.md  docker-compose.yml  frontend-feature01.md  index.html  kanban.md  package-lock.json  package.json  service-prompt.md  service-prompt2.md  tsconfig.json  ui-prompt.md  ui-prompt2.md  ui-prompt3.md  ui-prompt4.md  vite.config.ts
services/ship/: .dockerignore  .env.example  ANALYTICAL.md  Dockerfile  README.md  pyproject.toml
services/ship/deploy/gcp/: README.md  bootstrap.sh  cloudbuild.yaml  deploy-service.sh  env.example  load-data.sh
services/ship/output/ship/: AGENTS.md  INTEGRATION.md  MANUAL_DB_AUDIT.md  README.md  SERVICE_HANDOFF.md  SHIP_LOG.md  __init__.py  analytical.py  bootstrap_schema.py  classifier.py  diff.py  lexicon.py  manual_db_audit.py  memory.py  orchestrator.py  predicate_parser.py  refine.py  responses.py  router.py  run.py  runtime_config.py  schema_catalog.py  server.py  sql_compiler.py  sql_sandbox.py  summarizer.py  verify.py
services/ship/output/ship/primitives/: __init__.py  adverse_signal_discovery.py  base.py  canlii_case_search.py  classify_adverse_seriousness.py  concentration.py  coverage_audit.py  discover_entities.py  funding_cycles.py  funding_then_silent.py  trend.py  (+3 more)
services/ship/scripts/: init-db.sh  start.sh
services/ship/seed/: README.md
services/ship/seed/.local-db/: .env.example  README.md  import.js
(+229 files in other folders)
